app/assets/stylesheets/layout/_tablet.scss
@media only screen and (min-width:768px) and (max-width:1139px) {
  body {
    height: auto;
  }
  h4 {
    font-size: 22px;
  }
  h5 {
    font-size: 20px;
  }
  .wrapper {
    width: 95%;
    margin: 0 2.5%;
  }
  .header-image {
    width: 100%;
  }
  header .main-menu ul {
    margin-top: 60px;
  }
  .latest-jobs .job {
    min-height: 325px;
    height: inherit;
  }
  .latest-jobs .job p {
    margin-top: 0;
  }
  footer .col {
    @include gs-span(t, 1, 3);
    @include gs-float(t, left);
  }
  footer .new_newsletter_subscriber input[type='text'] {
    width: 70%;
  }
}

@media only screen and (min-width:768px) and (max-width:1139px) and (orientation:portrait) {
  .homepage .block {
    height: 330px;
  }
  .homepage .block h3 {
    margin-top: 105px;
  }
  .homepage .block p {
    width: 100%;
  }
  .homepage .block-double h3 {
    margin-top: 0;
  }

  .latest-jobs .job p {
    width: 55%;
  }

  .job-list .job {
    height: 340px;
  }
  .job-list .job .social {
    margin: 10px 0 0 0;
  }
  .job-list .job .job-info {
    height: auto;
  }

  .contact-page .contact-info {
    height: 445px;
  }
  .contact-page .page-content {
    height: 445px;
  }

  form .radio-buttons .radio-option {
    width: 50%;
    margin: 0 0 10px   0;
  }

  footer .col:last-child {
    width: 32%;
  }
  footer .copyright {
    margin: 30px 0 0 0;
  }
  footer .contact li {
    color: $grey-text;
  }
}

